--- a/environments/testext/CMakeLists.txt
+++ b/environments/testext/CMakeLists.txt
@@ -2,6 +2,7 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib/c9-env/testext)
 add_library(testext SHARED
     testext.cpp
 )
+target_link_libraries(testext libc9)
 add_custom_command(
     OUTPUT ${LIBRARY_OUTPUT_PATH}/testext.c9l
     COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/testext.c9l ${LIBRARY_OUTPUT_PATH}/testext.c9l
