Split out tracing from debug.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,11 +6,16 @@ set (channel9_VERSION_MINOR 0)
 
 if(DEFINED DEBUG)
     set (CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-g -O0")
-    add_definitions( -DDEBUG -DTRACE_SUB=0xffffffff -DTRACE_LEVEL=0 )
+    add_definitions( -DDEBUG )
 else(DEFINED DEBUG)
     set (CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-g -O4 --param inline-unit-growth=100000 --param large-function-growth=100000 --param max-inline-insns-single=100000 -Wall -Werror -frtti -Wno-unused-but-set-variable -Wno-strict-aliasing")
-    add_definitions( -DNDEBUG -DTRACE_SUB=0 -DTRACE_LEVEL=6 )
+    add_definitions( -DNDEBUG )
 endif(DEFINED DEBUG)
+if(DEFINED TRACE)
+    add_definitions( -DTRACE_SUB=0xffffffff -DTRACE_LEVEL=0 )
+else(DEFINED TRACE)
+    add_definitions( -DTRACE_SUB=0 -DTRACE_LEVEL=6 )
+endif(DEFINED TRACE)
 if(DEFINED VALGRIND)
     add_definitions( -DVALGRIND )
 else(DEFINED VALGRIND)
