Make loading c9b files part of libc9.
I expect this interface to change a lot in the future, but this should do for now.

--- a/src/jsoncpp/CMakeLists.txt
+++ b/src/jsoncpp/CMakeLists.txt
@@ -1,5 +1,5 @@
 include_directories(src/jsoncpp)
-add_library(jsoncpp
+add_library(jsoncpp SHARED
     json_reader.cpp
     json_value.cpp
     json_writer.cpp
