Made CMake search for ruby properly.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project (channel9)
 set (channel9_VERSION_MAJOR 1)
 set (channel9_VERSION_MINOR 0)
 
+find_package(Ruby REQUIRED)
+
 if(DEFINED DEBUG)
     set (CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-g -O0")
     add_definitions( -DDEBUG )
@@ -37,7 +39,7 @@ function(add_c9script SRC DST COMMON_PATH TARGET_PREFIX) # extra args are script
     foreach(FILE ${ARGN})
         add_custom_command(
             OUTPUT ${DST}/${COMMON_PATH}/${FILE}.c9b
-            COMMAND ruby -rubygems -I${CMAKE_SOURCE_DIR}/ruby/lib ${CMAKE_SOURCE_DIR}/ruby/bin/c9c ${SRC}/${COMMON_PATH}/${FILE} ${DST}/${COMMON_PATH}/${FILE}.c9b
+            COMMAND ${RUBY_EXECUTABLE} -rubygems -I${CMAKE_SOURCE_DIR}/ruby/lib ${CMAKE_SOURCE_DIR}/ruby/bin/c9c ${SRC}/${COMMON_PATH}/${FILE} ${DST}/${COMMON_PATH}/${FILE}.c9b
             DEPENDS ${SRC}/${COMMON_PATH}/${FILE}
         )
         add_custom_target(${TARGET_PREFIX}-${FILE} ALL DEPENDS ${DST}/${COMMON_PATH}/${FILE}.c9b)
