--- a/environments/testext/CMakeLists.txt
+++ b/environments/testext/CMakeLists.txt
@@ -11,3 +11,5 @@ add_custom_command(
 add_custom_target(testext-pkg-c9l ALL DEPENDS ${LIBRARY_OUTPUT_PATH}/testext.c9l)
 
 add_c9script(${CMAKE_CURRENT_SOURCE_DIR} ${LIBRARY_OUTPUT_PATH} . pkg-testext testext.c9s)
+
+add_c9_alias(testext)
