Adding ffi to build scripts.

--- a/src/libc9/CMakeLists.txt
+++ b/src/libc9/CMakeLists.txt
@@ -1,3 +1,8 @@
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(LIBFFI REQUIRED libffi)
+
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${LIBFFI_CFLAGS}")
+
 add_library (libc9 SHARED
     callable_context.cpp
     context.cpp
@@ -16,5 +21,5 @@ add_library (libc9 SHARED
     value.cpp
     variable_frame.cpp
 )
-target_link_libraries(libc9 dl jsoncpp)
+target_link_libraries(libc9 dl jsoncpp ${LIBFFI_LDFLAGS})
 set_target_properties(libc9 PROPERTIES OUTPUT_NAME c9)
